PR libstdc++/91786 fix compilation error with Clang

PR libstdc++/91786
	* include/bits/fs_path.h (filesystem_error): Move definition before
	the use in u8path.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278697 138bc75d-0d04-0410-961f-82ee72b054a4